--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
         "irc": "irc://irc.freenode.net/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.6",
+        "yiisoft/yii2": "*",
+		"yiisoft/yii2-debug": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
-        "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*"
     },
@@ -35,6 +35,6 @@
         }
     },
     "scripts": {
-        "post-install-cmd": "php init --env=Production --overwrite=n"
+        "post-install-cmd": "php init --env=Development --overwrite=n"
     }
 }
