--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-swiftmailer": "*",
 		"yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+		"fxp/composer-asset-plugin": "^1.2.0"
     },
     "require-dev": {
     },
